// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Typography/Title Light 1`] = `
.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

.c1 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 40px;
  text-transform: none;
  color: #FFF;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": "100%",
      }
    }
  >
    <h3
      className="c1"
      color="light"
    >
      The quick brown fox jumped over the lazy dog
    </h3>
  </div>
</div>
`;

exports[`Storyshots Typography/Title Primary 1`] = `
.c0 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 40px;
  text-transform: none;
  color: #6D6E70;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

<h3
  className="c0"
  color="primary"
>
  The quick brown fox jumped over the lazy dog
</h3>
`;

exports[`Storyshots Typography/Title Uppercase 1`] = `
.c0 {
  margin-top: 0;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 40px;
  text-transform: uppercase;
  color: #6D6E70;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

<h3
  className="c0"
  color="primary"
>
  The quick brown fox jumped over the lazy dog
</h3>
`;
